# qrstream-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build.yaml  release.yaml
src/: camera.rs  console.rs  decode.rs  encode.rs  error.rs  main.rs
static/: index.html
tests/: common.rs  encrypted.rs  plain.rs
